syntax = "proto3";
package message;

option go_package= "./../internal/message";

message Field{
    string key = 1;
    string value =2;
}

message Message{
    string id = 1;
    string type =2;
    repeated Field fields =3;
}

message CreateRequest {
    string clientId = 1;
    Message message = 2;
}

message CreateResponse {
    Message message = 1;
}

message GetAllRequest {
    string clientId = 1;
}

message GetAllResponse {
    repeated Message message = 1;
}

message GetAllOfTypeRequest {
    string clientId = 1;
    string type = 2;
}

message GetAllOfTypeResponse {
    repeated Message message = 1;
}

service ClientService {
    rpc Create(CreateRequest) returns (CreateResponse) {}
    rpc GetAll(GetAllRequest) returns (GetAllResponse) {}
    rpc GetAllOfType(GetAllOfTypeRequest) returns (GetAllOfTypeResponse) {}
}